[package]
name = "perseus-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { version = "0.4.0-beta.14", features = [ "hydrate" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(engine)'.dev-dependencies]
fantoccini = "0.17" #for testing

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-warp = {version="0.4.0-beta.14", features=[ "dflt-server" ]}
warp = { package = "warp-fix-171", version = "0.3" } # Temporary until Warp #171 is resolved
reqwest = { version = "0.11", features = [ "json" ] }


[build-dependencies]
glob = "0.3.0"
rsass = "0.26.0"